# hackattack2025

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  page.tsx
app/(dashboard)/: layout.tsx  page.tsx
app/(dashboard)/admin/: page.tsx
app/(dashboard)/firewall/: page.tsx
app/(dashboard)/network-traffic-analysis/: page.tsx
app/admin/: page.tsx
app/components/: ChatAssistant.tsx  Modal.tsx  Navbar.tsx  NotificationProvider.tsx  PopupDemo.tsx  RecentActivityItem.tsx  SecurityDashboard.tsx  SecurityDashboardCard.tsx  TrayHandler.tsx  TrayStatus.tsx
app/components/dashboard/: NetworkIntrusionCard.tsx  SecurityDashboard.tsx
app/components/features/: NotificationPopup.tsx  PopupDemo.tsx
app/components/layout/: TrayHandler.tsx
app/components/ui/: Button.tsx  (+1 more)
app/domain-blocker/: page.tsx
app/firewall/: DepartmentManagement.tsx  DeviceManagement.tsx  InterDepartment.tsx  page.tsx
app/network-report/: page.tsx
app/network-traffic-analysis/: page.tsx
app/popup-alert/: layout.tsx  page.tsx
app/security-assistant/: page.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  tray.json
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/assistant/: mod.rs
src-tauri/src/firewall/: common.rs  mod.rs  rules.rs
src-tauri/src/firewall/domain_blocking/: mod.rs  monitor.rs  utils.rs
src-tauri/src/network_traffic_analysis/: mod.rs  report.rs  suricata.rs  suricata.yaml
src-tauri/src/network_traffic_analysis/model/: DRF_model_python  inference.rs
(+3 files in other folders)
